--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,11 @@
 <section class="jumbotron text-center">
     <div class="container">
         <h1 class="jumbotron-heading">Dashboard Page</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
-            etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+        <p class="lead text-muted">
+            Something short and leading about the collection below—its contents, the
+            creator, etc. Make it short and sweet, but not too short so folks don't
+            simply skip over it entirely.
+        </p>
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -29,57 +32,73 @@
 
 <div class="album text-muted">
     <div class="container">
-
         <div class="row">
             <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <img data-src="holder.js/100px280/thumb" alt="Card image cap" />
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in
+                    to additional content. This content is a little bit longer.
+                </p>
             </div>
             <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <img data-src="holder.js/100px280/thumb" alt="Card image cap" />
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in
+                    to additional content. This content is a little bit longer.
+                </p>
             </div>
             <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-            </div>
-
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-            </div>
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-            </div>
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <img data-src="holder.js/100px280/thumb" alt="Card image cap" />
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in
+                    to additional content. This content is a little bit longer.
+                </p>
             </div>
 
             <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <img data-src="holder.js/100px280/thumb" alt="Card image cap" />
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in
+                    to additional content. This content is a little bit longer.
+                </p>
             </div>
             <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <img data-src="holder.js/100px280/thumb" alt="Card image cap" />
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in
+                    to additional content. This content is a little bit longer.
+                </p>
             </div>
             <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
+                <img data-src="holder.js/100px280/thumb" alt="Card image cap" />
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in
+                    to additional content. This content is a little bit longer.
+                </p>
+            </div>
+
+            <div class="card">
+                <img data-src="holder.js/100px280/thumb" alt="Card image cap" />
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in
+                    to additional content. This content is a little bit longer.
+                </p>
+            </div>
+            <div class="card">
+                <img data-src="holder.js/100px280/thumb" alt="Card image cap" />
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in
+                    to additional content. This content is a little bit longer.
+                </p>
+            </div>
+            <div class="card">
+                <img data-src="holder.js/100px280/thumb" alt="Card image cap" />
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in
+                    to additional content. This content is a little bit longer.
+                </p>
             </div>
         </div>
-
     </div>
 </div>
 <style>
@@ -94,13 +113,13 @@
     .card {
         float: left;
         width: 33.333%;
-        padding: .75rem;
+        padding: 0.75rem;
         margin-bottom: 2rem;
         border: 0;
     }
 
     .card>img {
-        margin-bottom: .75rem;
+        margin-bottom: 0.75rem;
     }
 
     .card-text {
